--- a/VRChat/96/1016296.html
+++ b/VRChat/96/1016296.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "XBFgcLqBcI5Chjp8/Q9f6MQ1WIn574oOAvzh2djQiS4="></script>
+    "cC6Caw6Vm0QczvPqloMRK66ERRE86ySTQeebU5jiirE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRchat等]ずんだ式オリジナル武器「滅減羅」","description":"【VRC等向け】ずんだ式オリジナル武器\n\n製作者：Zunda\n広報用Twitter：@FortuneZunda\n\n画像：metasequoia上のレンダリング画像\n\nデータ内容\n・3DSファイル\n・利用規約TXTファイル\n\n詳細\n・頂点数 306\n・総面数 528\n・三角数 528\n\n・オブジェクト数 5\n　・刃部分（ピンク）\n　・インナー（グレー）\n　・フレーム1（濃い紫）\n　・フレーム2（白）\n　・フレーム3（紫）\n\n・マテリアル数 5\n　・刃部分　　　　【ピンク】\n　・フレーム1　【濃い紫】\n　・フレーム2　　【白】\n　・フレーム3　【紫】\n　・インナー　　【グレー】\n\nテクスチャではなくマテリアルを直接指定しているのでunity上にて簡単に色の変更が可能です。\n\n基本的な規約\n本データおよび改変物をゲーム、動画等への使用は基本的にOKです。クレジットの表記も不要ですができれば当方の広報用Twitter（@FortuneZunda）を描いていただけると幸いです。\n\n色の変更はもちろんのこと、改変等もOK。商用利用等もOKです。\n\nですが本データまたは改変物の再配布や販売等は禁止します。\nまたゲーム等への使用は可能ですがデータがそのまま取り出せる状態での配布販売はNGです。\n政治的宗教的に関する利用、自作発言等も禁止します。\n\n本データの著作権は放棄していません。本データの著作権は製作者が有します。\nまた本データの使用に際して発生したいかなる問題や障害において、当方は一切の責任を負いません。\n\nご不明な点がございましたらお気軽に当方ツイッター@FortuneZundaまでご連絡ください。\n\n2018/9/17","url":"https://booth.pm/ja/items/1016296","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3a55c967-d985-4e72-833d-9ae2c7a493e5/i/1016296/958dcb6c-66c3-4d29-8fb7-80ebe45c2d39_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XBFgcLqBcI5Chjp8/Q9f6MQ1WIn574oOAvzh2djQiS4="></script>
+    nonce="cC6Caw6Vm0QczvPqloMRK66ERRE86ySTQeebU5jiirE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -419,9 +419,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
