--- a/VRChat/46/1016146.html
+++ b/VRChat/46/1016146.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Y8i/ZbU9zdXoh41jD4F2d7LqTsDmJ3ADqhJ1xlu7bA4="></script>
+    "uV1vJaZCaT3BEsG4x3b/d4A7qjzLsT0VW4RLwaD/+NI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"リボン(VRChat利用可能)","description":"リボンです。VRChat利用可。\n端がナナメのものと通常のものの2種類があります。\nUV展開はしておりませんので、必要であれば各自でお願いします。\n無料です。\n\n△408","url":"https://booth.pm/ja/items/1016146","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2a1d68f2-987f-4432-b142-5cbae38f36da/i/1016146/1157c8df-f259-4f25-b6da-56285fbe0164_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Y8i/ZbU9zdXoh41jD4F2d7LqTsDmJ3ADqhJ1xlu7bA4="></script>
+    nonce="uV1vJaZCaT3BEsG4x3b/d4A7qjzLsT0VW4RLwaD/+NI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -455,9 +455,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
