--- a/VRChat/62/1015362.html
+++ b/VRChat/62/1015362.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mW37cnjWzIF4tTHGHq4QZKsrvl4aQsITjEDnANsvGQQ="></script>
+    "L0R/7RV3SdIsUdFqEWfslXblqzrDAWADjLKYBsXFq18="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dモデル：狐火煙管","description":"この商品はVRchat向けのアクセサリとして作成した3Dモデルです。\nお好きな場所に設置する、持たせる、あるいは口に咥えたりなどしてお使いください。\nチェーン部分にはボーンが入っておりますので好きなように曲げたり、ダイナミックボーンなどのボーンを揺らすものを入れてご利用ください。\n\n本商品はblenderで作成し、Unityでの使用を想定して作られたモデルとなります。\n本商品のデータを使用したことで問題が発生した場合、作者は一切責任をとりません。\n\n\n【利用規約】\nこちらのモデルは商用・改変・成人向けなどの様々なコンテンツで使用することができます。\n本商品に含まれるデータを元にして、3Dモデルあるいは画像自体に商品性が依存するもの（例：素材集など）を製造、販売することはできません。\nデータを抜き出せる状態での二次配布は禁止します。\nまた、加工・改変を行った後のモデルも本モデルの規約が適用されます。\n本モデルを使用した時点で、利用規約に同意したものとみなします。\n\n\n【商品内容】\n下記のファイルが梱包されたzipファイルとなります。\n\n・Readme.txt（必ずお読みください）\n・fox_fire_kiseru.unitypackage（モデルとパーティクルが設置されたもの）\n・kiseru.fbx（ポリゴン数：1718）\n・kiseru_tex.png（テクスチャーファイル）\n・kiseru_tex.psd（テクスチャーの編集用ファイル）\n・fire.png（パーティクル用テクスチャ / 狐火）\n・kemuri.png（パーティクル用テクスチャ / 煙）\n・descriptionフォルダ内\n　→ fire_to_smoke.png（狐火を煙に変更する方法）\n　→ rb01.png ～ rb05.png（パーティクルをアバターに追従させる方法）\n　→ shapekey.png（煙管を短くするシェイプキーについて）\nその他説明などについて、分からないことがあれば作者のツイッターにＤＭ、あるいはメールまでお問い合わせください。","url":"https://booth.pm/ja/items/1015362","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/ecbe906e-dd0a-4826-9b04-0f8a857c3ac0/i/1015362/925a0bff-7c3d-4d38-8918-b444e4d23960_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mW37cnjWzIF4tTHGHq4QZKsrvl4aQsITjEDnANsvGQQ="></script>
+    nonce="L0R/7RV3SdIsUdFqEWfslXblqzrDAWADjLKYBsXFq18="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -425,9 +425,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
