--- a/VRChat/60/1014760.html
+++ b/VRChat/60/1014760.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "+3VIZPJRdw9bhZf7P5boCo90vejAf79d8AFtEyDOruE="></script>
+    "N6y7+nuqOznD/aU0Xvg80DJklKL/w6bRsFxDww8T2DE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】眼鏡【VRChat向け】","description":"VRChat向けの3Dモデルです。\n\n無料版・有料版に内容の差異はありません。\n\n※※※　間違いにご注意ください　※※※\n\nレンズ有り・無し、2種類のfbxファイルを用意しました。\n\nテクスチャファイルには、サンプルテクスチャが同封されています。\n","url":"https://booth.pm/ja/items/1014760","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/c9d4b93c-8161-4c35-a69e-4906ebf93b6a/i/1014760/9749fefb-3153-48cf-869f-a68236d859d7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+3VIZPJRdw9bhZf7P5boCo90vejAf79d8AFtEyDOruE="></script>
+    nonce="N6y7+nuqOznD/aU0Xvg80DJklKL/w6bRsFxDww8T2DE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -485,9 +485,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
