--- a/VRChat/08/1014608.html
+++ b/VRChat/08/1014608.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "cO1fbShAk6Tiel60Fj0kfxuzznWXepETSVhnpymBkIo="></script>
+    "gQXaUZS866OuTiMKWBfWucFvBXYvuzaNcYMIBAm1SHg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRアバター向け】『シャオマオ』【SDK3.0未対応】","description":"※現在Ver1.04です※\n\n◇◆VRアバター向け_オリジナル3Dモデル『シャオマオ』◇◆\n\n△ポリゴン約１４，０００の改変に最適なオリジナルモデルです。\n主にVRchatを想定しています。\n\n\n◆◇◇◆導入方法◆◇◆◇\n\n①Unity 2017.4.15ｆ1にVrchatSDKをインポートします。\n\n②本ZIP内の「XiaoMao」nのunitypackageをインポートします。\n\n③unityのAssetからシーンをダブルクリックしてください。\n\n④hierarchy内のboxの中からシャオマオ本体をboxの外に出してください。\n\n※animationフォルダーの中に数種類のanimationを入れてあるので、\n　好きなものを導入してください。\n\n※アイテムは「シャオマオ」の中にすでに格納してあります。\n　必要なければ消してください。\n\n---------------------------------------------------------\n\n◆商業利用について\n\nこの3Dモデル『シャオマオ』は主にVRchatでの利用を想定した物です。\n  \n他、このアバターは、動画配信などの営利（金銭の発生する）活動も行うことが可能です。\nゲーム制作、アニメーション制作等での利用も問題ありません。\n\n\n◆R-18・R-18Gへの利用について\n\n特に規制はありません。\n\n\n◆改変について\n\n『シャオマオ』とそれに関連したデータの改変は自由です。\n\n\n◆著作権\n\n『シャオマオ』とそれに関連したデータの改造および個人的利用範囲での流用は\n自由ですが、この配布データ『シャオマオ』及び改変したデータが持つ著作権は\n大元の製作者である竹本つかさに帰属するものとします。\n\n\n◆禁止事項\n\n『シャオマオ』とその付属の\nモデルデータ・テクスチャーデータの再配付・販売は\n改変の有無を問わず禁止します。\n\nこのモデルおよび同梱品はVRソーシャルサービスへのアップロードが可能ですが、\n改造の有無にかかわらず購入者以外が使用できる形でのアップロードおよび再配付はおやめください。\n\n◆トラブルについて\n\n竹本つかさは、本モデル『シャオマオ』を使用したことによる\n金銭・機器・機会的トラブルの損失・責任を負わないものとします。","url":"https://booth.pm/ja/items/1014608","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/4e60aa39-4a63-4661-b1ed-1f656886ab4d/i/1014608/491fea64-b2f4-4358-aafe-db3e3d3c273f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cO1fbShAk6Tiel60Fj0kfxuzznWXepETSVhnpymBkIo="></script>
+    nonce="gQXaUZS866OuTiMKWBfWucFvBXYvuzaNcYMIBAm1SHg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      897
+                                      896
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      897
+                                      896
                                     </div>
                                   </div></a>
                                 </div>
@@ -458,9 +458,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
