--- a/VRChat/40/989840.html
+++ b/VRChat/40/989840.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "5UHUdZtD8ROqg2QinYWdP4QxstoHZ7NMIlFJtbFqPzE="></script>
+    "MS7gH3cVkgGzj1T4CUrB/dYRbUYi8YkjokksIHYc5Dk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Stengun MkⅡ(fbxファイル) △3980","description":"この商品はステンガンMkⅡをモデリングしたものです。\nポリゴン数削減のため、細かい部分は再現されていません。ご了承ください。\n\nまた、VRChatでの使用を想定してある為、大きさをかなり小さめに設定してあります。\n\n2021/12 追記\n商品画像の変更、ボーン、スキニング済みのバージョン追加\n\n△3980ポリゴン、テクスチャ同梱。\n\n●内容物\n\n・fbxファイル『Suten_MK2.fbx』\n・テクスチャ一枚(Albedo用)『Suten_MK2_Skin.png』\n\nまたこれらのデータはzip形式で圧縮してあります。\n\n＜利用規約＞\n本モデルを使用したことによって生じるいかなる損害に対して等方は一切責任を負いません。 また、条件についての内容は予告なく変更する場合があります。\n\n非改変での再配布、再販売、自作発言等は禁止です。\nテクスチャ改変、モデル改変や商業への使用は大丈夫です。\n\n・バージョン情報\n2018/9/13 ver1.0 配布開始\n2018/12/9 商品名を修正\n2021/12/25 商品画像変更、ボーン、スキニング済みバージョン追加","url":"https://booth.pm/ja/items/989840","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/8f9f026a-3963-4972-9b28-0d458c4521ab/i/989840/060b3f0c-ccdc-41cf-86d5-f52c6353bf19_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5UHUdZtD8ROqg2QinYWdP4QxstoHZ7NMIlFJtbFqPzE="></script>
+    nonce="MS7gH3cVkgGzj1T4CUrB/dYRbUYi8YkjokksIHYc5Dk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -432,9 +432,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
