--- a/VRChat/23/1011023.html
+++ b/VRChat/23/1011023.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "xsZIqCjXYvQ0gZF9B7Rc8gzuokmijzYH5hXmmqXSH1A="></script>
+    "p8QFXAfyvpEld/d9EQsu0AEZjSo6XiYjAtWvhtieny8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"禁忌事務ノ魔導書 / Grimoire Kinkijim【3Dモデル】","description":"⚠Unitypackageインポート前に⚠\n事前に以下のAssetsをプロジェクト内にインポートしておいてください。\n・ユニティちゃんトゥーンシェーダー2.0 / UTS2\n\n\n【魔法陣シェーダーについて】\nGithubでも公開中です。同梱物より最新になる可能性があります。\nhttps://github.com/NamaeWatashino/MagicCircleShader\n\n - - -\n\n⚠Required asset⚠\nYou need these assets.\n・Unity-chan Toon Shader 2.0\n\n【About Magic Circle Shader】\nIt is also available on Github. It may be more recent than the package.\nhttps://github.com/NamaeWatashino/MagicCircleShader\n","url":"https://booth.pm/ja/items/1011023","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1011023/04a21ce5-9763-4efb-b449-4b8aba9a2976_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xsZIqCjXYvQ0gZF9B7Rc8gzuokmijzYH5hXmmqXSH1A="></script>
+    nonce="p8QFXAfyvpEld/d9EQsu0AEZjSo6XiYjAtWvhtieny8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -551,9 +551,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
