--- a/VRChat/71/1010971.html
+++ b/VRChat/71/1010971.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "eMRhRzdbpnHfIfkWz3dokVWfrWT7Al/yvsKlCdJlpys="></script>
+    "AJA6tcyZuDjkx/aPEm5hA088E44z9YiJO8dL29YSFdE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"8ポリゴン眼鏡No.002『スクエア型／フルリム』色変更可！","description":"◆ 解説\n眼鏡です。今回は画像うち最初２枚のスクエア型フルリムタイプです。\n今後も、フレームやレンズが異なるタイプも頒布するかも。\n度は入っていませんので悪しからず。\n\nまた、マテリアルカラーで色が変更できますので\nお子さんに合わせたオシャレが気軽に楽しめます。\n\nShader：自作『UnoMeganeStandard』透過有効、両面描画\n　　　　モデル含め修正完了しました。\n\n◆ 注意\n　本モデルに美少女（Shacloちゃん）は付属しません。\n　素敵な子ですので、ぜひこちらも御覧ください。\n\n　Shacloちゃん：https://booth.pm/ja/items/987296\n\n　宣伝での使用許可をくださった戸森美影さま、\n　誠にありがとうございました。\n\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n　　　　利用規約\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n◆ 利用について\n当モデルデータに付属しているデータの改変は自由です。\n本素材に関しては、営利、非営利を問わず\nゲーム、映像作品、動画配信等にご利用いただけます。\n※ Unreal Engine 4, MMD等ソフトウェア問わずご利用いただけます。\n\n◆ 禁止\n公序良俗に反する行為や目的、政治、宗教活動、他者に対する誹謗中傷目的での利用を禁止します。\nまた、当モデルデータに付属しているデータの再配布、販売は改変の有無を問わず禁止します\n\n◆ 免責事項\n当モデルを利用することで発生したトラブルや損失、損害に対して、製作者は一切責任を負いません。当モデルを使用する際は利用者の責任において行ってください。\n\n(c) 2018 unois All Rights Reserved.","url":"https://booth.pm/ja/items/1010971","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/c7999e42-deba-47e7-bf43-8f75c3fca7bc/i/1010971/67b823b9-c163-4786-a8ba-874dc0517d40_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eMRhRzdbpnHfIfkWz3dokVWfrWT7Al/yvsKlCdJlpys="></script>
+    nonce="AJA6tcyZuDjkx/aPEm5hA088E44z9YiJO8dL29YSFdE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -456,9 +456,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
