--- a/VRChat/10/1010810.html
+++ b/VRChat/10/1010810.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "y1J0pj60UPFNm2CVebVn6dyJnkQHd/wr6w3xU/k0vZs="></script>
+    "lPm2z38XprrOzhy33CmhIsN3t72qLAcgKIkBYWCRmik="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC用アニメファイル】ぺたん座り他【Humanoid用】","description":"【VRC用アニメーションファイル】ぺたん座り他【Humanoid用】\n\nVRChat使用を想定したHumanoid用アニメーションデータです。\ncustom Standing Anims\n　→overrideController\n　　→idleにセットして使用します。\n\nセット済みのサンプルoverrideControllerも同梱します。\n\n再配布はVRCのアバターペデスタル経由のみ許可します。\nいかなる場合も自己責任でお願いします。\n\n内また立ちは＜まばたき＞シェイプキーがあれば\n一定間隔でまばたきします！\n\n【VR】\nPRONEIDLEにセットした場合、ほぼ寝転がる体勢で移行します。\nまたはsteamの設定でフロアレベルを変更してください。\n\n【デスクトップ】\nZキーの寝転がるモーションで使用できます。\n\n※改変、未改変に関わらずNFTへの出品、利用を禁止します。\n\n\n※r1.02さんかく座りを追加しました。\n※r1.03ぺたん座りの手を膝の上へ、寝姿を3+LR種追加しました。\n※r1.04内また追加\n","url":"https://booth.pm/ja/items/1010810","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8f20bc28-6d6f-4dcb-99c8-1a04be7230e8/i/1010810/f4876b58-3780-4a96-8507-6984bbca5635_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="y1J0pj60UPFNm2CVebVn6dyJnkQHd/wr6w3xU/k0vZs="></script>
+    nonce="lPm2z38XprrOzhy33CmhIsN3t72qLAcgKIkBYWCRmik="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1686
+                                      1687
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1686
+                                      1687
                                     </div>
                                   </div></a>
                                 </div>
@@ -439,9 +439,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
