--- a/VRChat/24/1010024.html
+++ b/VRChat/24/1010024.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "sNOUaCluDOhhl2kvJYh2ik+/cRYJFQo3YztD2cO7Y6U="></script>
+    "LwVLsd0VZgAV+UBau9q0Y5Av6apZ/VaSkuOqYXyo0TE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】探検用ヘルメット","description":"ダンジョン探索時など、落下物から頭を守ってくれるヘルメットです。付属のライトで暗い場所の探索など重宝します。\n（Unityでスポットライトを組み込むことでヘッドライトとして使用できます。）\n\n主にVRChat内での利用を想定して制作しています。\n\n\n頂点：318　面：318　三角面：602　\n\n改善点やご要望、不具合等ありましたら、TwitterでリプライやDMいただけますと幸いです。\n\n★内容物\nunitypackage\nReadme.txt（利用規約）\n\n★更新履歴\n2018/09/12　Ver0.1.1\nヘルメット作成\n\n2022/06/28　Ver0.1.2\nヘルメットからSpotLightを削除\n\n\n","url":"https://booth.pm/ja/items/1010024","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3b939523-d29b-4dd1-ba51-cfba5642af23/i/1010024/efbcef39-a747-4459-ac2e-a28774a1f773_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sNOUaCluDOhhl2kvJYh2ik+/cRYJFQo3YztD2cO7Y6U="></script>
+    nonce="LwVLsd0VZgAV+UBau9q0Y5Av6apZ/VaSkuOqYXyo0TE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -409,9 +409,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
